--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 </head>
 <body class="font-sans bg-white text-[#0a5cb8] leading-relaxed">
   <div class="flex justify-center mt-5">
-      <img src="logo.png" alt="ERB Servicio Técnico Logo" class="h-20 w-auto">
+      <img src="logo.png" alt="ERB Servicio Técnico Logo">
   </div>
 
   <div id="language-selector" class="text-center my-5">
@@ -369,7 +369,7 @@
               <p class="m-0 text-sm leading-tight">
                   <span class="lang-es">Solicita tu inspección llamando a nuestros canales de atención al cliente.</span>
                   <span class="lang-ca">Sol·licita la teva inspecció trucant als nostres canals d'atenció al client.</span>
-                  <span class="lang-va">Sol·licita la teua inspecció cridant als nostres canals d'atenció al client.</span>
+                  <span class="lang-va">Sol·licita la teua inspección cridant als nostres canals d'atenció al client.</span>
               </p>
           </a>
           <a href="#formulario" class="btn bg-[#0a5cb8] text-white w-full sm:w-60 p-5 rounded-lg text-center no-underline shadow-md transition duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-[#0a5cb8]">
@@ -396,29 +396,6 @@
                   <span class="lang-va">Preus més competitius del mercat</span>
               </p>
           </a>
-      </div>
-  </section>
-
-  <section id="marcas" class="marcas py-16 px-5 bg-gray-100 text-center">
-      <h2 class="text-3xl md:text-4xl mb-8 text-[#0a5cb8]">
-          <span class="lang-es">Marcas con las que trabajamos</span>
-          <span class="lang-ca">Marques amb les quals treballem</span>
-          <span class="lang-va">Marques amb les quals treballem</span>
-      </h2>
-      <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4 max-w-screen-lg mx-auto items-center">
-          <div class="flex justify-center"><img src="samsung-logo-wordmark-rgb.png" alt="Logo Samsung" class="h-12 w-auto"></div>
-          <div class="flex justify-center"><img src="lg-logo-1.png" alt="Logo LG" class="h-12 w-auto"></div>
-          <div class="flex justify-center"><img src="balay.png" alt="Logo Balay" class="h-12 w-auto"></div>
-          <div class="flex justify-center"><img src="siemens.png" alt="Logo Siemens" class="h-12 w-auto"></div>
-          <div class="flex justify-center"><img src="Whirlpool_Corporation_Logo_(as_of_2017).svg.png" alt="Logo Whirlpool" class="h-12 w-auto"></div>
-          <div class="flex justify-center"><img src="neckar.png" alt="Logo Neckar" class="h-12 w-auto"></div>
-          <div class="flex justify-center"><img src="bosch.png" alt="Logo Bosch" class="h-12 w-auto"></div>
-          <div class="flex justify-center"><img src="Haier_logo.svg.png" alt="Logo Haier" class="h-12 w-auto"></div>
-          <div class="flex justify-center"><img src="mitsubishi.png" alt="Logo Mitsubishi Electric" class="h-12 w-auto"></div>
-          <div class="flex justify-center"><img src="saunier.png" alt="Logo Saunier Duval" class="h-12 w-auto"></div>
-          <div class="flex justify-center"><img src="ariston.jpg" alt="Logo Ariston Thermo Group" class="h-12 w-auto"></div>
-          <div class="flex justify-center"><img src="vaillant.jpg" alt="Logo Vaillant" class="h-12 w-auto"></div>
-          <div class="flex justify-center"><img src="junkers.png" alt="Logo Junkers" class="h-12 w-auto"></div>
       </div>
   </section>
 
@@ -483,14 +460,14 @@
           <option value="">Selecciona uno</option>
           <option value="Lavadora">Lavadoras</option>
           <option value="Lavavajillas">Lavavajillas</option>
-          <option value="Frigorífico">Frigoríficos y Congeladores</option>
-          <option value="Horno">Hornos</option>
-          <option value="Secadora">Secadoras</option>
-          <option value="Vitrocerámica">Vitrocerámicas</option>
-          <option value="Calentador">Calentadores de Agua</option>
-          <option value="Caldera">Calderas</option>
-          <option value="Aire acondicionado">Aires Acondicionados</option>
-          <option value="Termotanque">Termotanques</option>
+          <option value="Frigorífico">Frigorífico</option>
+          <option value="Horno">Horno</option>
+          <option value="Secadora">Secadora</option>
+          <option value="Vitrocerámica">Vitrocerámica</option>
+          <option value="Calentador">Calentador</option>
+          <option value="Caldera">Caldera</option>
+          <option value="Aire acondicionado">Aire acondicionado</option>
+          <option value="Termotanque">Termotanque</option>
           <option value="Otro">Otro</option>
         </select>
       </div>
@@ -511,6 +488,29 @@
       </button>
     </form>
     <div id="formResponse" class="form-response text-center mt-5 p-4 rounded-md font-bold hidden opacity-0 transition duration-500 ease-in-out" role="alert" aria-live="assertive"></div>
+  </section>
+
+  <section id="marcas" class="marcas py-16 px-5 bg-gray-100 text-center">
+      <h2 class="text-3xl md:text-4xl mb-8 text-[#0a5cb8]">
+          <span class="lang-es">Marcas con las que trabajamos</span>
+          <span class="lang-ca">Marques amb les quals treballem</span>
+          <span class="lang-va">Marques amb les quals treballem</span>
+      </h2>
+      <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4 max-w-screen-lg mx-auto items-center">
+          <div class="flex justify-center"><img src="samsung-logo-wordmark-rgb.png" alt="Logo Samsung" class="h-12 w-auto"></div>
+          <div class="flex justify-center"><img src="lg-logo-1.png" alt="Logo LG" class="h-12 w-auto"></div>
+          <div class="flex justify-center"><img src="balay.png" alt="Logo Balay" class="h-12 w-auto"></div>
+          <div class="flex justify-center"><img src="siemens.png" alt="Logo Siemens" class="h-12 w-auto"></div>
+          <div class="flex justify-center"><img src="Whirlpool_Corporation_Logo_(as_of_2017).svg.png" alt="Logo Whirlpool" class="h-12 w-auto"></div>
+          <div class="flex justify-center"><img src="neckar.png" alt="Logo Neckar" class="h-12 w-auto"></div>
+          <div class="flex justify-center"><img src="bosch.png" alt="Logo Bosch" class="h-12 w-auto"></div>
+          <div class="flex justify-center"><img src="Haier_logo.svg.png" alt="Logo Haier" class="h-12 w-auto"></div>
+          <div class="flex justify-center"><img src="mitsubishi.png" alt="Logo Mitsubishi Electric" class="h-12 w-auto"></div>
+          <div class="flex justify-center"><img src="saunier.png" alt="Logo Saunier Duval" class="h-12 w-auto"></div>
+          <div class="flex justify-center"><img src="ariston.jpg" alt="Logo Ariston Thermo Group" class="h-12 w-auto"></div>
+          <div class="flex justify-center"><img src="vaillant.jpg" alt="Logo Vaillant" class="h-12 w-auto"></div>
+          <div class="flex justify-center"><img src="junkers.png" alt="Logo Junkers" class="h-12 w-auto"></div>
+      </div>
   </section>
 
   <footer class="bg-[#0a5cb8] text-white text-center py-5 text-sm">
@@ -679,6 +679,116 @@
         });
 
 
+        // Get references to form elements and sections
+        const equipoSelect = document.getElementById('equipo');
+        const formularioSection = document.querySelector('.formulario');
+
+        // Mapping from displayed appliance name (Spanish) to form value
+        const applianceMap = {
+            "Frigoríficos y Congeladores": "Frigorífico",
+            "Aires Acondicionados": "Aire acondicionado",
+            "Lavadoras": "Lavadora",
+            "Lavavajillas": "Lavavajillas",
+            "Hornos": "Horno",
+            "Secadoras": "Secadora",
+            "Vitrocerámicas": "Vitrocerámica",
+            "Calentadores de Agua": "Calentador",
+            "Calderas": "Caldera",
+            "Termotanques": "Termotanque"
+        };
+
+        // Add click listeners to service cards
+        document.querySelectorAll('#servicios .card').forEach(card => {
+            card.addEventListener('click', () => {
+                // Get the appliance name from the currently displayed language span
+                const h3 = card.querySelector('h3');
+                // Find the visible language span within the h3
+                let applianceText = '';
+                const languages = ['es', 'ca', 'va'];
+                for (const lang of languages) {
+                    const span = h3.querySelector('.lang-' + lang);
+                    if (span && span.style.display !== 'none') {
+                        applianceText = span.textContent;
+                        break; // Found the visible text, exit loop
+                    }
+                }
+
+
+                // Find the corresponding form value using the Spanish text as key
+                // We need to map the text from any language to the Spanish key in applianceMap
+                // Let's create a reverse map or a more robust mapping
+                 const reverseApplianceMap = {
+                    es: {
+                        "Frigoríficos y Congeladores": "Frigorífico",
+                        "Aires Acondicionados": "Aire acondicionado",
+                        "Lavadoras": "Lavadora",
+                        "Lavavajillas": "Lavavajillas",
+                        "Hornos": "Horno",
+                        "Secadoras": "Secadora",
+                        "Vitrocerámicas": "Vitrocerámica",
+                        "Calentadores de Agua": "Calentador",
+                        "Calderas": "Caldera",
+                        "Termotanques": "Termotanque"
+                    },
+                    ca: {
+                        "Neveres i congeladors": "Frigorífico",
+                        "Aires condicionats": "Aire acondicionado",
+                        "Rentadores": "Lavadora",
+                        "Rentavaixelles": "Lavavajillas",
+                        "Forns": "Horno",
+                        "Assecadores": "Secadora",
+                        "Vitrocèrmiques": "Vitrocerámica",
+                        "Escalfadors d'aigua": "Calentador",
+                        "Calderes": "Caldera",
+                        "Termotancs": "Termotanque"
+                    },
+                    va: {
+                         "Neveres i congeladors": "Frigorífico",
+                         "Aires condicionats": "Aire acondicionado",
+                         "Rentadores": "Lavadora",
+                         "Rentavaixelles": "Lavavajillas",
+                         "Forns": "Horno",
+                         "Assecadores": "Secadora",
+                         "Vitrocèrmiques": "Vitrocerámica",
+                         "Escalfadors d'aigua": "Calentador",
+                         "Calderes": "Caldera",
+                         "Termotancs": "Termotanque"
+                    }
+                 };
+
+
+                // Get the form value based on the detected appliance text and the current language
+                const formValue = reverseApplianceMap[currentLang] ? reverseApplianceMap[currentLang][applianceText] : null;
+
+
+                if (formValue && equipoSelect) {
+                    // Set the form value
+                    equipoSelect.value = formValue;
+
+                    // Scroll to the form section
+                    if (formularioSection) {
+                        formularioSection.scrollIntoView({ behavior: 'smooth' });
+                    }
+                } else if (equipoSelect && formularioSection) {
+                     // If no direct mapping found for the specific language text,
+                     // try to find it using the Spanish text as a fallback before just scrolling.
+                     // This handles cases where translation keys might be missing or different.
+                     const spanishApplianceText = h3.querySelector('.lang-es').textContent;
+                     const fallbackFormValue = applianceMap[spanishApplianceText];
+                     if (fallbackFormValue) {
+                          equipoSelect.value = fallbackFormValue;
+                          if (formularioSection) {
+                             formularioSection.scrollIntoView({ behavior: 'smooth' });
+                          }
+                     } else {
+                         // If still no mapping, just scroll to the form
+                         formularioSection.scrollIntoView({ behavior: 'smooth' });
+                     }
+                }
+            });
+        });
+
+
         // Capturar el envío del formulario y procesarlo de forma asíncrona
          document.getElementById("contactForm").addEventListener("submit", function(e) {
            e.preventDefault(); // Evitar el envío tradicional
@@ -730,3 +840,4 @@
   </script>
 </body>
 </html>
+
