--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 <body class="font-sans bg-white text-[#0a5cb8] leading-relaxed">
 
   <div class="flex justify-center mt-5">
-      <img src="logo.png" alt="ERB Servicio Técnico Logo">
+      <img src="logo.png" alt="ERB Servicio Técnico Logo" class="h-16 sm:h-24 md:h-32 w-auto">
   </div>
 
   <div id="language-selector" class="text-center my-5 flex flex-wrap justify-center">
