--- a/index.html
+++ b/index.html
@@ -394,7 +394,9 @@
 <body class="font-sans bg-white text-[#0a5cb8] leading-relaxed">
 
   <div class="flex justify-center mt-5">
-      <img src="logo.png" alt="ERB Servicio Técnico Logo" class="h-16 sm:h-24 md:h-32 w-auto">
+      <div class="w-32 h-auto sm:w-40 md:w-48 lg:w-56">
+          <img src="logo.png" alt="ERB Servicio Técnico Logo" class="block w-full h-auto">
+      </div>
   </div>
 
   <div id="language-selector" class="text-center my-5 flex flex-wrap justify-center">
